platform_versioned_docs/version-4.12.0/how-to/gitops-end-to-end.mdx
---
title: End-to-end GitOps with ArgoCD
sidebar_label: GitOps End-to-End
sidebar_position: 1
description: Complete guide to managing vCluster Platform and tenant clusters with ArgoCD, from platform installation to tenant cluster deployment.
---

import InterpolatedCodeBlock from "@site/src/components/InterpolatedCodeBlock";

This guide walks through the full lifecycle of managing platform resources with ArgoCD, covering platform installation, cluster connections, project creation, and tenant cluster deployment. Each section references the detailed documentation for that step and provides the ArgoCD-specific configuration needed.

:::info
While this guide uses ArgoCD as the example, the same principles apply to other GitOps tools like Flux. Each section links to detailed documentation that includes tabs for alternative tooling.
:::

## Prerequisites

Before you begin, ensure you have:

- A Kubernetes cluster with administrative access
- [ArgoCD installed](https://argo-cd.readthedocs.io/en/stable/getting_started/) and configured on the cluster
- `helm` v3.10 or later
- `kubectl` configured with admin access to the target cluster

## 1. Install the platform

Deploy the platform as an ArgoCD Application. This uses the platform Helm chart with your desired configuration values.

Create an ArgoCD Application that points to the platform Helm chart:

<InterpolatedCodeBlock
  code={`apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: vcluster-platform
  namespace: argocd
spec:
  destination:
    namespace: vcluster-platform
    server: "https://kubernetes.default.svc"
  source:
    repoURL: "https://charts.loft.sh"
    targetRevision: [[VAR:PLATFORM_VERSION:4.6.0]]
    chart: vcluster-platform
    helm:
      parameters:
        - name: admin.create
          value: "true"
        - name: admin.username
          value: admin
        - name: admin.password
          value: "[[VAR:ADMIN_PASSWORD:your-secure-password]]"
        - name: ingress.enabled
          value: "true"
        - name: ingress.host
          value: "[[VAR:PLATFORM_HOST:vcluster-platform.example.com]]"
        - name: config.loftHost
          value: "https://[[VAR:PLATFORM_HOST:vcluster-platform.example.com]]"
  project: default
  syncPolicy:
    automated:
      prune: true
      selfHeal: true
    syncOptions:
      - CreateNamespace=true`}
  language="yaml"
  title="platform-application.yaml"
/>

Apply this to your cluster or commit it to a Git repository that ArgoCD monitors.

```bash
kubectl apply -f platform-application.yaml
```

:::warning ArgoCD and Helm releases
ArgoCD does not deploy the Helm release secret. Platform configuration updates must be managed through your Git repository, not the platform UI.
:::

For the full set of Helm configuration options and alternative installation methods, see the [platform installation with ArgoCD guide](../install/gitops.mdx).

## 2. Connect a control plane cluster

After the platform is running, connect control plane clusters where tenant clusters will be deployed. In a GitOps workflow, you can manage connected clusters as Kubernetes resources alongside your platform installation.

Each connected cluster requires two resources: a Cluster object and a Secret containing the cluster credentials.

<InterpolatedCodeBlock
  code={`apiVersion: management.loft.sh/v1
kind: Cluster
metadata:
  name: [[VAR:CLUSTER_NAME:my-host-cluster]]
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  displayName: "[[VAR:CLUSTER_NAME:my-host-cluster]]"
  owner:
    user: admin
  config:
    secretName: "loft-cluster-config-[[VAR:CLUSTER_NAME:my-host-cluster]]"
    secretNamespace: "vcluster-platform"
  access:
    - subresources:
        - "*"
      users:
        - admin
      verbs:
        - "*"`}
  language="yaml"
  title="cluster.yaml"
/>

<InterpolatedCodeBlock
  code={`apiVersion: v1
kind: Secret
metadata:
  name: "loft-cluster-config-[[VAR:CLUSTER_NAME:my-host-cluster]]"
  namespace: vcluster-platform
type: Opaque
stringData:
  config: |
    apiVersion: v1
    kind: Config
    clusters:
      - name: [[VAR:CLUSTER_NAME:my-host-cluster]]
        cluster:
          server: [[VAR:CLUSTER_API_SERVER:https://1.2.3.4:6443]]
          certificate-authority-data: [[VAR:CA_DATA:YOUR-CA-DATA]]
    contexts:
      - name: [[VAR:CLUSTER_NAME:my-host-cluster]]
        context:
          cluster: [[VAR:CLUSTER_NAME:my-host-cluster]]
          user: [[VAR:CLUSTER_NAME:my-host-cluster]]-user
    current-context: [[VAR:CLUSTER_NAME:my-host-cluster]]
    users:
      - name: [[VAR:CLUSTER_NAME:my-host-cluster]]-user
        user:
          token: [[VAR:CLUSTER_TOKEN:YOUR-TOKEN]]`}
  language="yaml"
  title="cluster-secret.yaml"
/>

:::warning Cluster secrets
The Secret contains authentication data for the remote cluster. Handle this appropriately in your GitOps pipeline. Consider using sealed secrets or an external secrets operator.
:::

The `SkipDryRunOnMissingResource=true` annotation is required because the Cluster CRD is installed by the platform itself. Without it, ArgoCD cannot sync the resource on initial deployment.

You also need to install the platform agent on each connected cluster. If you manage agents through GitOps, set the `DISABLE_AGENT=true` environment variable in your platform deployment and create a separate ArgoCD Application for the agent:

<InterpolatedCodeBlock
  code={`apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: platform-agent-[[VAR:CLUSTER_NAME:my-host-cluster]]
  namespace: argocd
spec:
  destination:
    namespace: vcluster-platform
    server: "[[VAR:CLUSTER_API_SERVER:https://1.2.3.4:6443]]"
  source:
    repoURL: "https://charts.loft.sh"
    targetRevision: [[VAR:PLATFORM_VERSION:4.6.0]]
    chart: vcluster-platform
    helm:
      parameters:
        - name: agentOnly
          value: "true"
  project: default
  syncPolicy:
    automated:
      prune: true
      selfHeal: true
    syncOptions:
      - CreateNamespace=true`}
  language="yaml"
  title="agent-application.yaml"
/>

To also register the control plane cluster with Argo CD so it can receive shared infrastructure applications directly, add `spec.argoCD` to the Cluster object after creating a connector (see [Step 3](#3-create-a-project)):

```yaml
spec:
  argoCD:
    enabled: true
    connector: argocd-main   # name of your connector Secret
```

For interactive setup methods using the UI or CLI, see the [connect a cluster guide](../administer/clusters/connect-cluster.mdx).

## 3. Create a project

Projects organize tenant clusters and control access, templates, and quotas. In a GitOps workflow, define projects as Project custom resources.

<InterpolatedCodeBlock
  code={`apiVersion: management.loft.sh/v1
kind: Project
metadata:
  name: [[VAR:PROJECT_NAME:team-alpha]]
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  displayName: [[VAR:PROJECT_NAME:team-alpha]]
  owner:
    user: admin
  allowedClusters:
    - name: "*"
  allowedTemplates:
    - kind: VirtualClusterTemplate
      group: storage.loft.sh
      name: "*"
  members:
    - kind: Team
      group: storage.loft.sh
      name: [[VAR:TEAM_NAME:dev-team]]
      clusterRole: loft-management-project-admin`}
  language="yaml"
  title="project.yaml"
/>

### Connect to Argo CD

To register tenant clusters with Argo CD, create a connector. A connector is a Kubernetes Secret in the Platform namespace that holds your Argo CD server credentials and endpoint. Once a connector exists, you reference it by name from each cluster you want registered. See [Connect to Argo CD](../integrations/argocd/connect-argocd.mdx) for the full setup, including required RBAC permissions and connector YAML.

If you are using the project-level Argo CD integration from an earlier version of vCluster Platform, see [Argo CD (legacy)](../integrations/argocd/legacy.mdx).

:::info management.loft.sh vs storage.loft.sh
Define resources using the `management.loft.sh` API group. The `storage.loft.sh` group is used internally by platform controllers and appears in some spec fields as references to existing resources.
:::

For interactive project creation using the UI, see the [create a project guide](../administer/projects/create.mdx).

## 4. Deploy tenant clusters

With the platform, cluster, and project in place, deploy tenant clusters through ArgoCD. There are two approaches depending on how you want to manage the tenant cluster lifecycle.

### Option A: Deploy with VirtualClusterInstance

Create a VirtualClusterInstance resource that the platform manages. This gives you full platform features like sleep mode, auto-delete, and template enforcement.

<InterpolatedCodeBlock
  code={`apiVersion: management.loft.sh/v1
kind: VirtualClusterInstance
metadata:
  name: [[VAR:VCLUSTER_NAME:dev-vcluster]]
  namespace: p-[[VAR:PROJECT_NAME:team-alpha]]
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  clusterRef:
    cluster: [[VAR:CLUSTER_NAME:my-host-cluster]]
  external: false
  owner:
    user: admin
  template:
    helmRelease:
      chart:
        version: [[VAR:VCLUSTER_VERSION:0.31.0]]
      values: |
        controlPlane:
          backingStore:
            etcd:
              deploy:
                enabled: true
        integrations:
          argoCD:
            enabled: true
            connector: argocd-main`}
  language="yaml"
  title="virtualclusterinstance.yaml"
/>

:::tip
The namespace follows the pattern `p-<project-name>`. The platform uses this convention to associate tenant clusters with projects.
:::

When the VirtualClusterInstance reconciles, Platform registers the tenant cluster with Argo CD using the connector credentials. You can then declare Argo CD Applications in the tenant cluster configuration. See [Deploy applications](../integrations/argocd/deploy-applications.mdx).

### Option B: Deploy with Helm chart directly

Deploy the vCluster Helm chart through an ArgoCD Application. This approach gives you direct control over the Helm release but does not provide platform lifecycle features unless you [register the tenant cluster afterward](../use-platform/virtual-clusters/add-virtual-clusters.mdx).

<InterpolatedCodeBlock
  code={`apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: [[VAR:VCLUSTER_NAME:dev-vcluster]]
  namespace: argocd
spec:
  project: default
  source:
    chart: vcluster
    repoURL: https://charts.loft.sh
    targetRevision: [[VAR:VCLUSTER_VERSION:0.31.0]]
    helm:
      releaseName: [[VAR:VCLUSTER_NAME:dev-vcluster]]
      valueFiles:
        - vcluster.yaml
  destination:
    server: https://kubernetes.default.svc
    namespace: [[VAR:NAMESPACE:team-alpha]]`}
  language="yaml"
  title="vcluster-application.yaml"
/>

For the full list of deployment options including CLI, Terraform, and Flux, see the [deploy vCluster guide](/docs/vcluster/deploy/control-plane/kubernetes-pod/basics).

## Manage stacks declaratively

A [Stack](../understand/what-are-stacks.mdx) is defined by two resources, `StackTemplate` and `StackInstance`. You can store both with the other Platform resources in your Git repository. A StackTemplate is cluster-scoped. Create each StackInstance in its project's `p-<project-name>` namespace.

This example defines a reusable Stack with two App tasks, then deploys it to a tenant cluster. Argo CD sync waves create the referenced template before the instance. The Stack controller, not Argo CD, enforces the task dependency and health gate.

```yaml title="stack-template.yaml"
apiVersion: management.loft.sh/v1
kind: StackTemplate
metadata:
  name: example-platform
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  displayName: Example platform
  parameters:
    - variable: namespace
      label: Namespace
      defaultValue: example
  tasks:
    - name: database
      app:
        templateRef:
          name: postgresql
        parameters:
          namespace: "{{ .Values.namespace }}"
    - name: api
      dependsOn:
        - database
      app:
        templateRef:
          name: example-api
        parameters:
          namespace: "{{ .Values.namespace }}"
---
apiVersion: management.loft.sh/v1
kind: StackInstance
metadata:
  name: example-platform
  namespace: p-team-alpha
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  destination:
    virtualCluster:
      name: dev-vcluster
  templateRef:
    name: example-platform
  parameters:
    namespace: example
  owner:
    user: admin
```

Set `spec.owner` on the StackInstance. App tasks deploy as their owner, and a GitOps controller applies the manifest with its own service account rather than a Platform identity. The owner is immutable once set, so a later commit can't change it.

Declare the referenced App or Argo CD application templates in an earlier sync wave or manage them separately. A referenced StackTemplate is resolved on every StackInstance reconciliation, so a committed template change can update existing instances. Review `prunePolicy` before removing tasks. Its default value, `Retain`, reports removed child applications as orphans instead of deleting them.

For the complete task and output schema, see [Create a Stack template](../administer/templates/create-stack-templates.mdx). For Stack resource permissions, see [Stack permissions](../administer/users-permissions/permissions/stacks.mdx).

## Manage GitOps drift

Platform controllers may modify certain fields on resources after creation, causing drift in ArgoCD. Configure `ignoreDifferences` in your ArgoCD Applications to handle this:

```yaml
spec:
  ignoreDifferences:
    # Ignore status for all Platform custom resources
    - group: management.loft.sh
      kind: "*"
      jsonPointers:
        - /status
    # Ignore controller-managed fields
    - group: management.loft.sh
      kind: "*"
      managedFieldsManagers:
        - loft
  syncPolicy:
    syncOptions:
      - RespectIgnoreDifferences=true
```

For a complete breakdown of drift-causing fields by resource type and tool-specific configuration, see the [GitOps drift management section](../install/gitops.mdx#manage-gitops-drift).

## Repository structure

A typical Git repository for this workflow looks like:

```text
platform-gitops/
  applications/
    platform.yaml              # ArgoCD Application for vCluster Platform
    agent-cluster-1.yaml       # ArgoCD Application for agent on cluster-1
  resources/
    clusters/
      cluster-1.yaml           # Cluster + Secret resources
    projects/
      team-alpha.yaml           # Project resource
    virtual-clusters/
      dev-vcluster.yaml         # VirtualClusterInstance
    stacks/
      example-platform.yaml     # StackTemplate + StackInstance
```

## Next steps

- [Configure platform settings](../configure/introduction.mdx) for authentication, audit logging, and more
- [Set up templates](../administer/templates/create-templates.mdx) to standardize tenant cluster configurations
- [Configure project quotas](../administer/projects/quotas.mdx) to control resource usage
- [Enable sleep mode](/docs/vcluster/manage/sleep-wakeup) to reduce costs on idle tenant clusters
